manifest,icons,and bit of desktop style

--- a/index.html
+++ b/index.html
@@ -2,7 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/x-icon" href="/scan&sip-apple-icon.png" />
+
+    <!-- apple icon -->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/scan&sip-apple-icon.png"
+    />
+    <!-- manifest -->
+    <link rel="manifest" href="/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Scan&Sip-Create your own digital menu</title>
   </head>
