a bit of readme touchup,licence,styling fixes etc

--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="author" content="Antonio Blašković" />
+    <meta
+      name="description"
+      content="Scan&Sip is an intuitive app that allows businesses to manage 
+      digital menus effortlessly. Users can create and edit locations, categories, and menu 
+      items, while also generating QR codes for easy access. The app offers customizable themes, 
+      giving businesses the flexibility to choose a design that fits their branding and style."
+    />
     <link rel="icon" type="image/x-icon" href="/scan&sip-apple-icon.png" />
 
     <!-- apple icon -->
